clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/owned-struct-ownedtype.cbs
// RUN: %clang_cc1 -verify %s

void * malloc(unsigned long);
void free(void *);

struct A {
        long * owned b;
};

owned struct S {
public:
        short * owned x;
        struct A y;
        ~S(S this) {
                free((void *)this.x);
        } // expected-error {{destructor for`owned struct S` incorrect, this.y.b is of owned type and needs to be handled manually}}
};